--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clon Google</title>
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,19 +13,19 @@
             <nav class="navegador">
                 <a href="#">Gmail</a>
                 <a href="#">Imágenes</a>
-                <a href=""><img src="img/puntos.png" alt></a>
+                <a href=""><img src="puntos.png" alt></a>
                 <a class="acceder" href="">Acceder</a>
             </nav>
         </header>
         <div class="letra-google">
-            <img id="logo" src="img/google-logo.png" alt="google-logo">
+            <img id="logo" src="google-logo.png" alt="google-logo">
         </div>
     <section class="buscador">
         <div class="barra-buscador">
-            <img src="img/lupa.png" alt="">
+            <img src="lupa.png" alt="">
             <textarea name id cols="30" rows="10"></textarea>
-            <img src="img/microfono.png" alt="">
-            <img src="img/buscador-imagenes.png" alt="">
+            <img src="microfono.png" alt="">
+            <img src="buscador-imagenes.png" alt="">
         </div>
             <a href="">
                 <p id="search">Buscar en Google</p>
